--- a/index.haml
+++ b/index.haml
@@ -6,6 +6,15 @@
 
 .row
   .twelvecol.last
-    %p
+    %p.logo_text
       plain d.
-
+    %p.motto
+      web design & development
+    %nav
+      %ul
+        %li
+          %a{:href => "https://twitter.com/#!/dawidwu", :target => '_blank'} twitter
+        %li
+          %a{:href => "https://dawidw.pl", :target => '_blank'} blog
+        %li
+          %a{:href => "mailto:dawid@plaind.pl", :target => '_blank'} mail
