--- a/_layouts/base.haml
+++ b/_layouts/base.haml
@@ -6,9 +6,9 @@
     %link{:rel => "stylesheet", :href => "/css/1140.css"}
     %link{:rel => "stylesheet", :href => "/css/ie.css"}
     %link{:rel => "stylesheet", :href => "/css/variables.css"}
-    %link{:rel => "stylesheet", :href => "/css/mixins.css"}
     %link{:rel => "stylesheet", :href => "/css/styles.css"}
     %link{:rel => "author", :href => "/humans.txt"}
+    %script{:src => "http://use.typekit.com/mjs0jem.js"}
     %script{:src => "/js/jquery-1.8.2.min.js"}
     %script{:src => "/js/css3-mediaqueries.js"}
     %script{:src => "/js/base.js"}
