--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,9 +6,9 @@
     <link href='/css/1140.css' rel='stylesheet'>
     <link href='/css/ie.css' rel='stylesheet'>
     <link href='/css/variables.css' rel='stylesheet'>
-    <link href='/css/mixins.css' rel='stylesheet'>
     <link href='/css/styles.css' rel='stylesheet'>
     <link href='/humans.txt' rel='author'>
+    <script src='http://use.typekit.com/mjs0jem.js'></script>
     <script src='/js/jquery-1.8.2.min.js'></script>
     <script src='/js/css3-mediaqueries.js'></script>
     <script src='/js/base.js'></script>
