--- a/index.haml
+++ b/index.haml
@@ -6,6 +6,12 @@
 
 .row
   .twelvecol.last
+    .logo_container
+      .logo
+        .outer
+          .inner
+            %span.tilda
+              = "~"
     %p.logo_text
       plain d.
     %p.motto
