--- a/css/styles.scss
+++ b/css/styles.scss
@@ -63,6 +63,22 @@
   }
 }
 
+@media screen and (max-width: 440px) {
+  body{
+    nav{
+      li{
+        width: 100%;
+        margin-bottom: 5px;
+        a{
+          margin: 0 auto;
+          width: 80%;
+        }
+      }
+    }
+  }
+
+}
+
 body {
   .logo_container{
     text-align: center;
