--- a/index.haml
+++ b/index.haml
@@ -4,23 +4,24 @@
   title: plain d.
   ---
 
-.row
-  .twelvecol.last
-    .logo_container
-      .logo
-        .outer
-          .inner
-            %span.tilda
-              = "~"
-    %p.logo_text
-      plain d.
-    %p.motto
-      web design & development
-    %nav
-      %ul
-        %li
-          %a{:href => "https://twitter.com/#!/dawidwu", :target => '_blank'} twitter
-        %li
-          %a{:href => "https://dawidw.pl", :target => '_blank'} blog
-        %li
-          %a{:href => "mailto:dawid@plaind.pl", :target => '_blank'} mail
+%section.container#intro
+  .row
+    .twelvecol.last
+      .logo_container
+        .logo
+          .outer
+            .inner
+              %span.tilda
+                = "~"
+      %p.logo_text
+        plain d.
+      %p.motto
+        web design & development
+      %nav
+        %ul
+          %li
+            %a{:href => "https://twitter.com/#!/dawidwu", :target => '_blank'} twitter
+          %li
+            %a{:href => "https://dawidw.pl", :target => '_blank'} blog
+          %li
+            %a{:href => "mailto:dawid@plaind.pl", :target => '_blank'} mail
