--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,6 +9,7 @@
     <link href='/humans.txt' rel='author'>
     <script src='http://use.typekit.com/mjs0jem.js'></script>
     <script src='/js/jquery-1.8.2.min.js'></script>
+    <script src='/js/underscore.js'></script>
     <script src='/js/css3-mediaqueries.js'></script>
     <script src='/js/base.js'></script>
     <title>{{ page.title }}</title>
