--- a/index.haml
+++ b/index.haml
@@ -4,7 +4,7 @@
   title: plain d.
   ---
 
-%section.container#intro
+%section.container#intro{data: { speed: 2000}}
   .row
     .twelvecol.last
       .logo_container
@@ -25,3 +25,8 @@
             %a{:href => "https://dawidw.pl", :target => '_blank'} blog
           %li
             %a{:href => "mailto:dawid@plaind.pl", :target => '_blank'} mail
+
+/ %section.container#work{data: {speed: 12}}
+
+
+/ %section.container#about{data: {speed: 22}}
