--- a/_layouts/base.haml
+++ b/_layouts/base.haml
@@ -9,6 +9,7 @@
     %link{:rel => "author", :href => "/humans.txt"}
     %script{:src => "http://use.typekit.com/mjs0jem.js"}
     %script{:src => "/js/jquery-1.8.2.min.js"}
+    %script{:src => "/js/underscore.js"}
     %script{:src => "/js/css3-mediaqueries.js"}
     %script{:src => "/js/base.js"}
     %title {{ page.title }}
